@@ -41,11 +41,20 @@
 -export([init/1, handle_call/3, handle_cast/2, handle_info/2,
 	 terminate/2, code_change/3]).
 
+-include_lib("exmpp/include/exmpp.hrl").
+
 -include("ejabberd.hrl").
 
 -record(state, {host,
 		module,
 		function}).
+
+% XXX OLD FORMAT: Re-include jlib.hrl (after clean-up).
+-record(iq, {id = "",
+             type,
+             xmlns = "",
+             lang = "",
+             sub_el}).
 
 %%====================================================================
 %% API
@@ -101,10 +110,12 @@ handle(Host, Module, Function, Opts, From, To, IQ) ->
 	no_queue ->
 	    process_iq(Host, Module, Function, From, To, IQ);
 	{one_queue, Pid} ->
-	    Pid ! {process_iq, From, To, IQ};
+            {FromOld, ToOld, IQ_Rec} = convert_to_old_structs(From, To, IQ),
+	    Pid ! {process_iq, FromOld, ToOld, IQ_Rec};
 	{queues, Pids} ->
 	    Pid = lists:nth(erlang:phash(now(), length(Pids)), Pids),
-	    Pid ! {process_iq, From, To, IQ};
+            {FromOld, ToOld, IQ_Rec} = convert_to_old_structs(From, To, IQ),
+	    Pid ! {process_iq, FromOld, ToOld, IQ_Rec};
 	parallel ->
 	    spawn(?MODULE, process_iq, [Host, Module, Function, From, To, IQ]);
 	_ ->
@@ -113,14 +124,20 @@ handle(Host, Module, Function, Opts, From, To, IQ) ->
 
 
 process_iq(_Host, Module, Function, From, To, IQ) ->
-    case catch Module:Function(From, To, IQ) of
+    {FromOld, ToOld, IQ_Rec} = convert_to_old_structs(From, To, IQ),
+    case catch Module:Function(FromOld, ToOld, IQ_Rec) of
 	{'EXIT', Reason} ->
 	    ?ERROR_MSG("~p", [Reason]);
 	ResIQ ->
 	    if
 		ResIQ /= ignore ->
+                    ReplyOld = jlib:iq_to_xml(ResIQ),
+                    Reply = exmpp_xml:xmlelement_to_xmlel(ReplyOld,
+                      [?NS_JABBER_CLIENT],
+                      [{?NS_XMPP, ?NS_XMPP_pfx},
+                        {?NS_DIALBACK, ?NS_DIALBACK_pfx}]),
 		    ejabberd_router:route(To, From,
-					  jlib:iq_to_xml(ResIQ));
+					  Reply);
 		true ->
 		    ok
 	    end
@@ -199,3 +216,25 @@ code_change(_OldVsn, State, _Extra) ->
 %%--------------------------------------------------------------------
 %%% Internal functions
 %%--------------------------------------------------------------------
+
+convert_to_old_structs(From, To, IQ) ->
+    if
+        is_record(IQ, iq) ->
+            catch throw(for_stacktrace), % To have a stacktrace.
+            io:format("~nIQ HANDLER: old #iq:~n~p~n~p~n~n",
+              [IQ, erlang:get_stacktrace()]),
+            {From, To, IQ};
+        true ->
+            F = jlib:to_old_jid(From),
+            T = jlib:to_old_jid(To),
+            Default_NS = case lists:member({IQ#xmlel.ns, none},
+              IQ#xmlel.declared_ns) of
+                true  -> [];
+                false -> [IQ#xmlel.ns]
+            end,
+            IQOld = exmpp_xml:xmlel_to_xmlelement(IQ,
+              Default_NS,
+              [{?NS_XMPP, ?NS_XMPP_pfx}, {?NS_DIALBACK, ?NS_DIALBACK_pfx}]),
+            I = jlib:iq_query_info(IQOld),
+            {F, T, I}
+    end.
